separate css file

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="index_style.css">
 
   <title>$NUME_BOT$</title>
 
@@ -10,7 +11,7 @@
 
 <body>
   <div>
-    <h1 style = "text-align: center;">Discord Dashboard</h1>
+    <h1>Discord Dashboard</h1>
   </div>
 
 $SERVER$
