--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,24 @@
 </head>
 
 <body>
-  <div>
+  <div id="navbar">
+
+    <ul>
+     <li><a href="default.asp">Home</a></li>
+     <li><a href="news.asp">About</a></li>
+   </ul>
+
+  </div>
+
+  <div class = "content">
     <h1>Discord Dashboard</h1>
   </div>
 
-$SERVER$
+  <div class = "content">
+  $SERVER$
+  </div>
 
+  <div style="margin:1000px"</div>
 
 </body>
 </html>
