--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,52 @@
 <!doctype html>
 
 <head>
+  <style>
+    h1 {
+      text-align: center;
+      padding-top:4%;
+    }
+
+    #navbar {
+
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #333;
+    }
+
+    li {
+      float: left;
+
+    }
+
+    li a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+
+    /* Change the link color to #111 (black) on hover */
+    li a:hover {
+      background-color: #111;
+    }
+
+    body {
+      margin: 0;
+    }
+
+    .content {
+      margin: 8px
+    }
+
+  </style>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="index_style.css">
 
   <title>$NUME_BOT$</title>
 
