server_grid.html redesign

--- a/src/server_grid.html
+++ b/src/server_grid.html
@@ -1,4 +1,8 @@
 <div>
-    <p>$NUME_SERVER$</p>
+
+  <div style = "background: gray; margin-left:10%; margin-right:10%; margin-top:2%">
+    <p style = "text-align: center">$NUME_SERVER$</p>
     <br>
+  </div>
+
 </div>
