--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
     }
 
   </style>
+
   <meta charset="utf-8">
 
   <title>$NUME_BOT$</title>
@@ -67,7 +68,7 @@
     <h1>Discord Dashboard</h1>
   </div>
 
-  <div class = "content">
+  <div class = "content" style = "margin-top:5%">
   $SERVER$
   </div>
 
